Added some comments and formatting

--- a/project 2/outputs.ipynb
+++ b/project 2/outputs.ipynb
@@ -628,31 +628,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h3>References</h3>\n",
+    "\n",
+    "* Part 1 XML parsing - https://www.fandom.comLinks to an external site.\n",
+    "\n",
+    "* Part 2 Using an API - https://vpic.nhtsa.dot.gov/api/vehicles/getallmanufacturers?format=jsonLinks to an external site.\n",
+    "\n",
+    "* Part 3 Web Scraping - https://www.goodreads.com/quotes"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
