updated the dataset URL

--- a/Analysis of death by selected causes from 2014 to 2019/all__results.ipynb
+++ b/Analysis of death by selected causes from 2014 to 2019/all__results.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5><b>Research Questions</b></h5>\n",
+    "<h5><b>Research Questions(Data Aggregation, Grouping, Reshaping & Analysis)</b></h5>\n",
     "\n",
     "* Are there seasonal variations in mortality for specific diseases or causes, and if so, what might explain these variations?\n",
     "* What are the monthly trends in the number of deaths due to Influenza and Pneumonia over the years?\n"
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1415,12 +1415,14 @@
     "1.\tWe can see seasonal variations in deaths due to 3 causes such as natural causes, diseases of heart and malignant neoplasms. Death counts during the months of January and December are higher for these diseases. During these months its winter and the temperatures are low this will weaken the immune system due to winter diseases and the blood vessels are more constrained during this time. So, people with diseases of heart and malignant neoplasm have more chances to die.\n",
     "\n",
     "2.\tAnother insight is the number of deaths of natural cause is much higher than all the causes of death and that is affected by the seasonal variations. So obviously this will increase the whole death count of all causes. It is due to severe climatic conditions in winter and natural disasters.\n",
-    "Combining these conclusions, it is confirmed that there is seasonal variations in mortality for specific diseases or causes."
+    "Combining these conclusions, it is confirmed that there is seasonal variations in mortality for specific diseases or causes.\n",
+    "\n",
+    "Graph is plotted by taking the mean values of death counts for all causes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1464,9 +1466,9 @@
     "* Mortality Rates increases as we move from 2014 to 2019\n",
     "* Natural Cause is the leading cause of death\n",
     "* Accidents is the leading cause of deaths due to external factors\n",
-    "* there is a seasonal trend in the death when we analyse all the causes of death, there is more number of deaths in the winter periods which are the months of november to feb\n",
+    "* There is a seasonal trend in the death when we analyse all the causes of death, there is more number of deaths in the winter periods which are the months of november to feb\n",
     "\n",
-    "In closing, this data analysis project has provided valuable insights into mortality rate. The findings not only enhance our understanding of death rate but also serve as a foundation for health care or similar organisations in preventing future deaths. As I conclude this analysis, we recognize the continuous nature of data exploration and the potential for ongoing refinement and expansion of our insights."
+    "In closing, this data analysis project has provided valuable insights into mortality rate. The findings not only enhance our understanding of death rate but also serve as a foundation for health care or similar organisations in preventing future deaths. As I conclude this analysis, I recognize the continuous nature of data exploration and the potential for ongoing refinement and expansion of my insights."
    ]
   },
   {
@@ -1480,8 +1482,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset Used - https://catalog.data.gov/dataset/monthly-counts-of-deaths-by-select-causes-2014-2019-da9df"
+    "Dataset Used - https://catalog.data.gov/dataset/monthly-counts-of-deaths-by-select-causes-2014-2019-da9df\n",
+    "\n",
+    "How to do EDA - https://www.analyticsvidhya.com/blog/2022/07/step-by-step-exploratory-data-analysis-eda-using-python/"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
