changes in project 2 and 3

--- a/Web data extraction using python/outputs.ipynb
+++ b/Web data extraction using python/outputs.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,18 +44,18 @@
       "3                      https://www.fandom.com/explore-de\n",
       "4                      https://www.fandom.com/explore-es\n",
       "...                                                  ...\n",
-      "14902  https://fandom.com/video/2a5x73gK/honest-game-...\n",
-      "14903  https://fandom.com/video/QQOcqI69/katee-sackho...\n",
-      "14904  https://fandom.com/video/Hwlxn7uc/the-last-of-...\n",
-      "14905  https://fandom.com/video/e702PjIp/evil-dead-th...\n",
-      "14906  https://fandom.com/video/zDCAAWsl/cram-it-why-...\n",
+      "14903  https://fandom.com/video/e702PjIp/evil-dead-th...\n",
+      "14904  https://fandom.com/video/Kk3dpiAR/playbreak-ep...\n",
+      "14905  https://fandom.com/video/wYJOjcxk/marvel-s-mid...\n",
+      "14906  https://fandom.com/video/HGHp60Zq/play-this-xb...\n",
+      "14907  https://fandom.com/video/zDCAAWsl/cram-it-why-...\n",
       "\n",
-      "[14907 rows x 1 columns]\n"
+      "[14908 rows x 1 columns]\n"
      ]
     }
    ],
    "source": [
-    "from web_data_packages import xml_parsing"
+    "from src.web_data import xml_parsing"
    ]
   },
   {
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "from web_data_packages import api_parsing"
+    "from src.web_data import api_parsing"
    ]
   },
   {
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from web_data_packages import web_scraping"
+    "from src.web_data import web_scraping"
    ]
   },
   {
